# fruitbox-fsg

./: .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.sh  cron.sh  deploy.sh  package-lock.json  plab.sh  shell.nix  top10.json
backend/: build.sh  package-lock.json  package.json  run.sh  server.js  top10.json
backend/src/: main.rs  server_state.rs  ws_messages.rs
frontend/: bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  Apple.tsx  Board.tsx  Chat.tsx  GameLobby.tsx  Leaderboard.tsx  MainTitle.tsx  Popup.tsx  gameSocket.ts  types.ts
frontend/src/types/: ws.ts
src/: Main.cpp  main.rs  server_state.rs  ws_messages.rs
src/Game/: GameState.cpp  GameState.h
